--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.1.8",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
     "twilio": "^3.80.0"
   }
 }
