--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ MPESA_PAYBILL=
 MPESA_CONSUMER_KEY=um8wMMkgdtH7GHi6JNIu0Nm7zYUB5FH2
 MPESA_PASSKEY=
 MPESA_CONSUMER_SECRET=GBPKaNGfi8kjfULo
+PORT=5000
